--- a/nsdev-wp/Gemfile
+++ b/nsdev-wp/Gemfile
@@ -1,10 +1,21 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
-# The original notes from this file have been moved to the 'gemfile-notes.md' documentation file.
 
-group :development, :test do
-	gem 'appmap'
-end
+####
+# Welcome to your project's Gemfile, used by Rubygems & Bundler.
+#
+# To install a plugin, run:
+#
+#   bundle add new-plugin-name -g bridgetown_plugins
+#
+# This will ensure the plugin is added to the correct Bundler group.
+#
+# When you run Bridgetown commands, we recommend using a binstub like so:
+#
+#   bin/bridgetown start (or console, etc.)
+#
+# This will help ensure the proper Bridgetown version is running.
+####
 
 # If you need to upgrade/switch Bridgetown versions, change the line below
 # and then run `bundle update bridgetown`
@@ -19,4 +30,7 @@ gem "puma", "< 7"
 
 # Uncomment to use the Inspectors API to manipulate the output
 # of your HTML or XML resources:
-gem "nokogiri", "~> 1.13"
+# gem "nokogiri", "~> 1.13"
+
+# Or for faster parsing of HTML-only resources via Inspectors, use Nokolexbor:
+# gem "nokolexbor", "~> 0.4"
