--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,13 @@
 {
 	"configurations": [
 		{
-			"type": "pwa-msedge",
+			"type": "msedge",
 			"name": "Launch Microsoft Edge",
 			"request": "launch",
 			"runtimeArgs": [
 				"--remote-debugging-port=9222"
 			],
-			"url": "c:\\Users\\rjoub\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.1\\out\\startpage\\index.html",
+			"url": "localhost:4000",
 			"presentation": {
 				"hidden": true
 			}
